exports[`test sets a new state 1`] = `
Object {
  "bobLoblaw": "Has a law blog",
  "errorMessage": null,
  "isConnected": null,
  "isFetching": false,
  "notificationPayload": Object {},
  "notificationProject": Object {},
  "notifications": Object {
    "general": true,
  },
  "projectList": Array [],
  "pushEnabled": false,
  "pushPrompted": false,
  "registration": Object {
    "global_email_communication": true,
  },
  "selectedDiscipline": null,
  "settings": Object {
    "promptForWorkflow": false,
  },
  "user": Object {},
  "webViewNavCounter": 0,
}
`;

exports[`test sets state from initial state 1`] = `
Object {
  "errorMessage": null,
  "isConnected": true,
  "isFetching": false,
  "notificationPayload": Object {},
  "notificationProject": Object {},
  "notifications": Object {
    "general": true,
  },
  "projectList": Array [],
  "pushEnabled": false,
  "pushPrompted": false,
  "registration": Object {
    "global_email_communication": true,
  },
  "selectedDiscipline": null,
  "settings": Object {
    "promptForWorkflow": false,
  },
  "user": Object {},
  "webViewNavCounter": 0,
}
`;

exports[`test sets user 1`] = `
Object {
  "errorMessage": null,
  "isConnected": null,
  "isFetching": false,
  "notificationPayload": Object {},
  "notificationProject": Object {},
  "notifications": Object {
    "general": true,
  },
  "projectList": Array [],
  "pushEnabled": false,
  "pushPrompted": false,
  "registration": Object {
    "global_email_communication": true,
  },
  "selectedDiscipline": null,
  "settings": Object {
    "promptForWorkflow": false,
  },
  "user": Object {
    "avatar": "Some avatar",
    "display_name": "Me",
  },
  "webViewNavCounter": 0,
}
`;

exports[`test unsets user 1`] = `
Object {
  "errorMessage": null,
  "isConnected": null,
  "isFetching": false,
  "notificationPayload": Object {},
  "notificationProject": Object {},
  "notifications": Object {
    "general": true,
  },
  "projectList": Array [],
  "pushEnabled": false,
  "pushPrompted": false,
  "registration": Object {
    "global_email_communication": true,
  },
  "selectedDiscipline": null,
  "settings": Object {
    "promptForWorkflow": false,
  },
  "user": Object {},
  "webViewNavCounter": 0,
}
`;
